cabal-version:       >=1.10
name:                mu-tests
version:             0.1.0.0
license-file:        LICENSE
author:              Akshay Mankar
maintainer:          akshay@wire.com
build-type:          Simple
extra-source-files:  CHANGELOG.md test.proto

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <4.15
                     , mu-protobuf >= 0.4.0.3
                     , mu-rpc >= 0.4.0.1
                     , mu-schema >= 0.3.1.1
                     , mu-grpc-server >= 0.4.0.0
                     , template-haskell
  exposed-modules:     MuTest