cabal-version:       >=1.10
name:                many-messages
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-language:    Haskell2010
  hs-source-dirs:      .
  exposed-modules:     Many
  build-depends:       base >=4.14 && <4.15
                     , mu-protobuf >= 0.4.0.3
                     , mu-rpc >= 0.4.0.1
                     , mu-schema >= 0.3.1.1
                     , mu-grpc-server >= 0.4.0.0
                     , template-haskell